--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashScreen"
+            android:name=".Activity.SplashScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -23,37 +23,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:label="Registration Form" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activity.LoginActivity"
             android:windowSoftInputMode="stateAlwaysHidden"
             android:label="Login" />
         <activity
-            android:name=".Dashboard"
+            android:name=".Activity.Dashboard"
             android:label="Welcome to My Job Fair 2018-19" />
         <activity
-            android:name=".Doctrate"
-            android:label="Doctorate / PHD " />
-        <activity
-            android:name=".Graduation"
-            android:label="Graduaction" />
-        <activity
-            android:name=".PostGraduaction"
-            android:label="Post Graduation" />
-        <activity
-            android:name=".Diploma"
-            android:label="Diploma" />
-        <activity
-            android:name=".Hsc"
-            android:label="HSC" />
-        <activity
-            android:name=".Ssc"
-            android:label="SSC" />
-        <activity
             android:label="My Profile"
-            android:name=".Profile"></activity>
+            android:name=".Activity.Profile"></activity>
     </application>
 
 </manifest>
