--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation 'com.aurelhubert:ahbottomnavigation:2.0.4'
     implementation 'net.gotev:uploadservice:3.1'
     implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.koushikdutta.ion:ion:2.+'
+
 
 }
